[package]
name = "lostme"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
shuttle-runtime = "0.48.0"
shuttle-actix-web = "0.48.0"
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
